# src/main/java/com/dev/listi/app/dto/CreateClientRequest.java
@@ -1,0 +1,4 @@
+package com.dev.listi.app.dto;
+
+public record CreateClientRequest(String name, String email) {
+}
